--- a/app/styles/_mixin.scss
+++ b/app/styles/_mixin.scss
@@ -6,7 +6,7 @@
   @else if $size == m {
     @media screen and (min-width: $bp-m) {@content}}
   @else if $size == ml {
-    @media screen and (min-width: $bp-xs) and (max-width: $bp-lg) {@content}}  
+    @media screen and (min-width: $bp-xs - 3em) and (max-width: $bp-lg) {@content}}  
   @else if $size == lg {
     @media screen and (min-width: $bp-lg) {@content}}
   @else if $size == xl {
