--- a/index.jade
+++ b/index.jade
@@ -1,3 +1,26 @@
-h1 Welcome to Harp.
-h3 This is yours to own. Enjoying.
-p | what you mean
+main
+  section#about
+    li
+      p
+        |Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. 
+          
+  section#services
+    li
+      define
+    li
+      design
+    li
+      refine
+      
+      
+  section#work
+    li
+      a(href="http://cdpn.io/mcgte") Calculator
+      
+    li
+      a(href="http://dev-toolkit.herokuapp.com/") Schedule
+    
+  section#contact
+    li
+      p
+        | Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'? 
