--- a/includes/_head.jade
+++ b/includes/_head.jade
@@ -4,4 +4,4 @@ head
   meta(name="" content="")
   meta(name="viewport" content="width=device-width, initial-scale=1")
   title="Robert James"
-  link(rel="stylesheet" href="styles/main.css")
+  link(rel="stylesheet" href="main.css")
