--- a/includes/_scripts.jade
+++ b/includes/_scripts.jade
@@ -1,5 +1,23 @@
-script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js").
-script(src="scripts/main.js").
+script(async src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js").
+script(async src="scripts/main.js").
+script(async src='http://www.wufoo.com/scripts/embed/form.js')
+script.
+  var m1s0myta1pbzrtg;(function(d, t) {
+  var s = d.createElement(t), options = {
+  'userName':'rmjames',
+  'formHash':'m1s0myta1pbzrtg',
+  'autoResize':true,
+  'height':'450',
+  'async':true,
+  'host':'wufoo.com',
+  'header':'hide',
+  'ssl':true};
+  s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+  s.onload = s.onreadystatechange = function() {
+  var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+  try { m1s0myta1pbzrtg = new WufooForm();m1s0myta1pbzrtg.initialize(options);m1s0myta1pbzrtg.display(); } catch (e) {}};
+  var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+  })(document, 'script');	
 script.
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
