--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -1,25 +1,36 @@
-// @font-face {
-//   font-family:'icomoon';src:url("fonts/icomoon.eot");src:url("fonts/icomoon.eot?#iefix") format("embedded-opentype"),url("fonts/icomoon.woff") format("woff"),url("fonts/icomoon.ttf") format("truetype"),url("fonts/icomoon.svg#icomoon") format("svg");font-weight:normal;font-style:normal;
-// }
+@font-face {
+  font-family: 'Roboto Condensed';
+  font-style: normal;
+  font-weight: 300;
+  src: url(/fonts/RobotoCondensed-Light.eot);
+  src: local('Roboto Condensed Light'), local('RobotoCondensed-Light'), url(/fonts/RobotoCondensed-Light.eot) format('embedded-opentype'), url(/fonts/RobotoCondensed-Light.woff) format('woff');
+}
 
-// [data-icon]:before {
-//   font-family: 'icomoon';
-//   content: attr(data-icon);
-//   speak: none;
-//   font-weight: normal;
-//   font-variant: normal;
-//   text-transform: none;
-//   line-height: 1;
-//   -webkit-font-smoothing: antialiased;
-// }
+@font-face {
+  font-family: 'Roboto Condensed';
+  font-style: normal;
+  font-weight: 400;
+  src: url(/fonts/RobotoCondensed-Regular.eot);
+  src: local('Roboto Condensed Regular'), local('RobotoCondensed-Regular'), url(/fonts/RobotoCondensed-Regular.eot) format('embedded-opentype'), url(/fonts/RobotoCondensed-Regular.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'Roboto Condensed';
+  font-style: normal;
+  font-weight: 700;
+  src: url(/fonts/RobotoCondensed-Bold.eot);
+  src: local('Roboto Condensed Regular'), local('RobotoCondensed-Bold'), url(/fonts/RobotoCondensed-Bold.eot) format('embedded-opentype'), url(/fonts/RobotoCondensed-Bold.woff) format('woff');
+}
+
+//Iconfonts
 
 @font-face {
   font-family: 'icomoon';
   src:url('fonts/icomoon.eot?4g38uz');
   src:url('fonts/icomoon.eot?#iefix4g38uz') format('embedded-opentype'),
-    url('fonts/icomoon.woff?4g38uz') format('woff'),
-    url('fonts/icomoon.ttf?4g38uz') format('truetype'),
-    url('fonts/icomoon.svg?4g38uz#icomoon') format('svg');
+      url('fonts/icomoon.woff?4g38uz') format('woff'),
+      url('fonts/icomoon.ttf?4g38uz') format('truetype'),
+      url('fonts/icomoon.svg?4g38uz#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -49,28 +60,22 @@
 }
 
 
-h1 {
-    font-size: 40.7em;
-    text-transform: uppercase;
-    text-shadow: $text-shadow;
-}
+//Headings
 
-h2 {
-    text-align:center;
-    color: red;
-    letter-spacing: .103em;//.206em;
-    line-height: 2.8em;
-    font-size: 2.25em;//2.6em;
-    text-transform: uppercase;
-    text-shadow: $text-shadow;
-}
-
-h3 {
+h1, h2, h3 {
     text-align:center;
     color: rgba(250,10,10,.9);
-    letter-spacing: .0103em;
-    //line-height: 2.8em;
-    font-size: 1.5em;
+    letter-spacing: .103em;//.206em;
+    line-height: 4.2em;
+    font-size: ms(4);//2.25em;//2.6em;
     text-transform: uppercase;
-    //text-shadow: $text-shadow;
+    text-shadow: $text-shadow;
+}
+
+h1 {font-size: ms(3);
+    line-height: 2.8em;
+}
+
+h3 {font-size: ms(2);
+    line-height: 2.8em;
 }
