--- a/styles/modules/_config.scss
+++ b/styles/modules/_config.scss
@@ -16,7 +16,4 @@ $color-work: rgba(20,134,242,.91);
 $color-header: #2c3e50;
 $color-top_headine: #badcef;
 $color-main-background: #D3E0E0;
-
-//Modular Scale
-$ms-base: .5em;
-$ms-ratio: $golden;
+$color-text: #020912;
