--- a/includes/_header.jade
+++ b/includes/_header.jade
@@ -1,11 +1,11 @@
 header
   h1.top-headline
-    a(href="/") robert james   
+    a(href="/") robert james
   nav.nav
     ul
       li: a(href="#about") About
       li: a(href="#services") Services
       li: a(href="#work") Work
       li: a(href="#contact") Contact
-      li: a(href="/_blog") blog
+      // li: a(href="/_blog") blog
   .logo
