--- a/main.scss
+++ b/main.scss
@@ -6,15 +6,18 @@
  @import 'styles/modules/header.scss';
  @import 'styles/modules/footer.scss';
 
+*,
+*:after,
+*:before { box-sizing: border-box; }
+
 html,
 body {
   width: 100%;
   height: 100%;
-  margin: 0;
-  padding: 0;
 }
 
 body {
+  //background: url("../images/greyzz.png") fixed;
   position: relative;
   font-family: 'Roboto Condensed', Helvetica, Arial, sans-serif;
   font-weight: 300;
@@ -22,61 +25,98 @@ body {
   box-sizing: border-box;
   min-height: 100%;
   margin: 0 auto;
-  overflow-y: scroll;
   line-height: 1.4;
   letter-spacing: .1em;
   color: $color-text;
 }
 
+main { min-height: initial; }
 
-main {min-height: initial;}
+.about {
+  background: lighten($color-header, 68%);
+  height: 60vh;
+  position: relative;
+  text-shadow: $text-shadow;
+    &:before {
+      @include center;
+      content: 'Web Designer | Developer';
+    }
+}
 
-section, #work {
+.services {
   display: flex;
   flex-direction: column;
+  padding: .1em;
+  position: relative;
+    .services-module {
+      height: 60vh;
+      background: lighten($color-header, 64%);
+      text-shadow: $text-shadow;
+      position: relative;
+        &:before {
+          @include center;
+          content: 'Define';
+        }
+        &:nth-child(2) {
+          background: lighten($color-header, 60%);;
+            &:before {
+              @include center;
+              content: 'Design';
+            }
+        }
+        &:nth-child(3) {
+          background: lighten($color-header, 56%);;
+            &:before {
+              @include center;
+              content: 'Refine';
+            }
+        }
+    }
+}
+
+.work {
+  display: flex;
   flex-flow: wrap;
   justify-content: space-around;
   align-items: center;
-  //width: 100%;
   height: 100vh;
   margin-bottom: .1rem;
   background: url("../images/greyzz.png") fixed;
     li {
       list-style: none;
-      padding: 2rem;}
+      padding: 2rem;
+    }
     p {
       font-size: 1.1em;
       padding: 4.5rem;
-    }  
+    }
 }
 
-#services {
-  display: flex;
-  flex-direction: column;
+.portfolio-item {
+  background-size: cover;
+  background-position: 50% 50%;
+  box-shadow: 4px 4px 3px rgba(40,40,40,.5);
+  margin: 1em;
+  height: 13em;
+  //width: 13em;
+  text-align: center;
+  transform: skew(-3deg);
+  flex: 0 1 14em;
+    &:nth-child(1) {
+      background: url("../images/calc.jpg");
+      background-size: cover;
+      background-position: 50% 50%;
+    }
+    &:nth-child(2) {
+      background: url("../images/sched.jpg");
+      background-size: cover;
+      background-position: 50% 50%;
+    }
+    a { display: block; }
 }
 
-#work {
-    // height: 100%;
-      li {
-        background-size: cover;
-        background-position: 50% 50%;
-        box-shadow: 4px 4px 3px rgba(40,40,40,.5);
-        margin: 1em;
-        height: 13em;
-        width: 13em;
-        text-align: center;
-        //flex: 1 0 13em;
-          &:nth-child(1) {
-            background: url("../images/calc.jpg"); 
-            background-size: cover;
-            background-position: 50% 50%;}
-          &:nth-child(2) {
-            background: url("../images/sched.jpg");
-            background-size: cover;
-            background-position: 50% 50%;}
-          // &:last-child {
-          //   flex: 1;}  
-      }
-      a {display: block;}
-}
+.contact {
+  height: 60vh;
+  text-shadow: $text-shadow;
 
+}
