--- a/index.jade
+++ b/index.jade
@@ -1,18 +1,13 @@
 main
   section#about.about
-    //h2 Web Designer | Developer
 
   section#services.services
-    //h2 services
 
     .services-module
-      //h3 define
 
     .services-module
-      //h3 design
 
     .services-module
-      //h3 refine
 
   section#work.work
 
@@ -25,4 +20,4 @@ main
         h3.Schedule Schedule
 
   section#contact.contact
-    h2 contact
+    a(href='mailto:rma.james@gmail.com') contact
