--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -3,25 +3,24 @@ footer {
   box-shadow: 0px 0px 3px $color-text;
   text-align: center;
   padding: .53rem 0;
+      p { padding-bottom: 1em; }
 
       ul {
         display: flex;
         flex-flow: wrap;
         justify-content: space-around;
-        //align-items: center;
-        margin-bottom: 1em;
+        margin-bottom: .5em;
         list-style: none;
         }
 
       li {
-        flex: 0 1 7.5em;
+        flex: 0 1 7em;
         margin: 1.3em .05em;
         text-align: center;
         line-height: 3em;
         }
 
       a {
-        //@extend %transition;
         display: block;
         color: rgba(18, 24, 61, .9);
         font-size: 2.4em;
