--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -1,13 +1,10 @@
 .top-headline {
   background: lighten($color-header, 73%);
   box-shadow: 0px 1px 2px $color-text;
-  padding: 0em .2em;
-  //width: 100%;
+  padding: .8em .2em;
   text-align: center;
-  //line-height: 2em;
-  font-size: 1.2rem;
+  font-size: 1.5em;
   opacity: .8;
-  z-index: 5;
     a {
       text-decoration: none;
       color: #020912;
@@ -21,6 +18,7 @@
   background-size: cover;
   background-position: 50% 40%;
   perspective: 200em;
+  transform: translateZ(0);
 }
 
 .nav {
@@ -33,8 +31,8 @@
   }
   li {
     text-transform: uppercase;
-    letter-spacing: .23em;
-    flex: 1 0 6.6em;
+    letter-spacing: .2em;
+    flex: 1 1 10em;
     margin: .045em;
     padding: 0 1.8em;
     text-align: center;
@@ -51,9 +49,9 @@
       }
   }
 
-  li:first-child { background-color: lighten($color-header, 43%); }
-  li:nth-child(2) { background-color: lighten($color-header, 35%); }
-  li:nth-child(n+3) { background-color: lighten($color-header, 28%); }
-  li:nth-child(n+4) { background-color: lighten($color-header, 20%); }
-  li:last-child { background-color: lighten($color-header, 12%); }
+  li:first-child { background: lighten($color-header, 43%); }
+  li:nth-child(2) { background: lighten($color-header, 35%); }
+  li:nth-child(n+3) { background: lighten($color-header, 28%); }
+  li:nth-child(n+4) { background: lighten($color-header, 20%); }
+  li:last-child { background: lighten($color-header, 12%); }
 }
