--- a/styles/modules/_config.scss
+++ b/styles/modules/_config.scss
@@ -1,5 +1,4 @@
 //Color Variables
-
 $primary: rgb(44, 62, 80);
 $secondary: rgb(208, 219, 229);
 $tertiary: rgb(248, 80, 9);
@@ -10,13 +9,14 @@ $color-work: rgba(20,134,242,.91);
 $color-header: #2c3e50;
 $color-top_headine: #badcef;
 $color-main-background: #D3E0E0;
-$color-text: hsl(0,20%,20%); //#020912;
-
-$text-color: hsl(0,20%,20%);
-
-$text-shadow: .9px .9px 7px rgba(149, 165, 166,1.0);
-//$text-shadow: 0px 0px 11px black;
+$color-text: hsl(0,20%,20%);
+$text-shadow: .9px .9px 3px rgba(149, 165, 166,1.0);
 $text-shadow-toggle-hover:1.1px 1.1px 9.1px rgba(241, 250, 19,1.0);
+
+$link: rgb(251, 124, 53)git;
+$link-active: $link;
+$link-hover: $link;
+$link-visited: $link;
 
 //Media Querie variables
 $bp-xs: 15.75em;
