--- a/styles/modules/_function-mixin.scss
+++ b/styles/modules/_function-mixin.scss
@@ -1,9 +1,11 @@
 @mixin center {
   position: absolute;
   top: 50%;
-  right: 50%;
-  transform: translate(50%,50%);
+  left: 50%;
+  transform: translate(-50%,-50%);
   }
+
+
 
 
 @function grid($col, $has-gutter: false) {
