fixed type error

--- a/styles/modules/_config.scss
+++ b/styles/modules/_config.scss
@@ -13,12 +13,12 @@ $color-text: hsl(0,20%,20%);
 $text-shadow: .9px .9px 3px rgba(149, 165, 166,1.0);
 $text-shadow-toggle-hover:1.1px 1.1px 9.1px rgba(241, 250, 19,1.0);
 
-$link: rgb(251, 124, 53)git;
+$link: rgb(251, 124, 53);
 $link-active: $link;
 $link-hover: $link;
 $link-visited: $link;
 
-//Media Querie variables
+//Media Query variables
 $bp-xs: 15.75em;
 $bp-sm: 20em;
 $bp-m: 30em;
